--- a/frontend/templates/inicio.html
+++ b/frontend/templates/inicio.html
@@ -11,37 +11,37 @@
 
 <body>
     <!-- Barra de navegación -->
-    <nav class="navbar">
-        <div class="">
-            <a class="navbar-brand" href="#">
-                <img src="../assets/img/Abstract Colorful Technology Solutions Professional Logo.png"
-                    class="logo" alt="User" />
-            </a>
-        </div>
-        <div class="user-info">
-            <img src="../assets/img/usuario.webp" class="logo-usuario" alt="User" />
-            <div class="user-details">
-                <p class="user-name">Posada Javier</p>
-                <p class="user-email">Ignacio9876.jijp@gmail.com</p>
-                <button id="btn-salir">Cerrar sesion</button>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <div class="nav-item d-flex align-items-center">
+                        <!-- Contenedor para mostrar nombre y apellido -->
+                        <span id="nombreApellido" class="me-3"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
 
-
-
     <!-- Contenido principal -->
     <div class="container mt-5">
-        <h3 class="welcome-text">Bienvenido: <strong>Posada Javier</strong></h3>
+        <h3 class="welcome-text">Bienvenido: <strong id="bienvenidaNombre"></strong></h3>
 
         <div class="row mt-4 justify-content-center">
             <!-- Tarjeta MATERIALES-->
             <div class="col-md-3">
                 <div id="materiales-card" class="card card-custom">
-                    <div class="card-body bg-materiales rounded-top p-5">
-
-                    </div>
+                    <div class="card-body bg-materiales rounded-top p-5"></div>
                     <div>
                         <h5 class="card-title text-center p-4">MATERIALES</h5>
                     </div>
@@ -55,9 +55,7 @@
             <!-- Tarjeta RRHH -->
             <div class="col-md-3">
                 <div id="rrhh-card" class="card card-custom">
-                    <div class="card-body bg-rrhh rounded-top p-5">
-
-                    </div>
+                    <div class="card-body bg-rrhh rounded-top p-5"></div>
                     <div>
                         <h5 class="card-title text-center p-4">RRHH</h5>
                     </div>
@@ -68,15 +66,10 @@
                 </div>
             </div>
 
-
-
-
             <!-- Tarjeta ventas -->
             <div class="col-md-3">
                 <div id="ventas-card" class="card card-custom">
-                    <div class="card-body bg-ventas rounded-top p-5">
-
-                    </div>
+                    <div class="card-body bg-ventas rounded-top p-5"></div>
                     <div>
                         <h5 class="card-title text-center p-4">VENTAS</h5>
                     </div>
@@ -89,11 +82,11 @@
         </div>
     </div>
 
+    <!-- Scripts de JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/inicio.js"></script>
     <script src="../scripts/cerrarsesion.js"></script>
-
-
+    <script src="../scripts/login.js"></script>
 </body>
 
 </html>
