--- a/frontend/templates/materiales.html
+++ b/frontend/templates/materiales.html
@@ -11,31 +11,36 @@
 
 <body>
     <!-- Barra de navegación -->
-    <nav class="navbar">
-        <div class="">
-            <a class="navbar-brand" href="#">
-                <img src="../assets/img/Abstract Colorful Technology Solutions Professional Logo.png"
-                    class="logo" alt="User" />
-            </a>
-        </div>
-        <div class="user-info">
-            <img src="../assets/img/usuario.webp" class="logo-usuario" alt="User" />
-            <div class="user-details">
-                <p class="user-name">Posada Javier</p>
-                <p class="user-email">Ignacio9876.jijp@gmail.com</p>
-                <button id="btn-salir">Cerrar sesion</button>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <div class="nav-item d-flex align-items-center">
+                        <span id="nombreApellido" class="me-3"></span>
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
 
-    <div class="d-flex justify-content-between align-items-center my-4">
-        <h2 class="header-title">MATERIALES</h2>
-    </div>
-
+    <!-- Contenido principal -->
     <div class="container mt-5">
+        <h3 class="welcome-text"> <strong id="bienvenidaNombre"></strong></h3>
+
         <div class="row mt-4 justify-content-center">
-            
+            <!-- Tarjeta MATERIALES-->
+
+
             <!-- Tarjeta productos -->
             <div class="col-md-3">
                 <div id="productos-card" class="card card-custom">
@@ -73,9 +78,10 @@
         </div>
     </div>
 
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/materiales.js"></script>
-    <script src="../scripts/cerrarsesion.js"></script>
 
 </body>
 
