--- a/frontend/templates/productos.html
+++ b/frontend/templates/productos.html
@@ -12,23 +12,28 @@
 <body>
 
     <div class="container-fluid">
-        <nav class="navbar">
-            <div class="">
-                <a class="navbar-brand" href="#">
-                    <img src="../assets/img/Abstract Colorful Technology Solutions Professional Logo.png"
-                        class="logo" alt="User" />
-                </a>
-            </div>
-            <div class="user-info">
-                <img src="../assets/img/usuario.webp" class="logo-usuario" alt="User" />
-                <div class="user-details">
-                    <p class="user-name">Posada Javier</p>
-                    <p class="user-email">Ignacio9876.jijp@gmail.com</p>
-                    <button id="btn-salir">Cerrar sesion</button>
-    
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex">
+                        <div class="nav-item d-flex align-items-center">
+                            <!-- Contenedor para mostrar nombre y apellido -->
+                            <span id="nombreApellido" class="me-3"></span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
+    
 
         <div class="d-flex justify-content-between align-items-center my-4">
             <h2 class="header-title">PRODUCTOS</h2>
@@ -117,6 +122,8 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
         <script src="../scripts/productos.js"></script>
+        <script src="../scripts/login.js"></script>
+        <script src="../scripts/cerrarsesion.js"></script>
     </div>
 
 </body>
