--- a/frontend/templates/ventas.html
+++ b/frontend/templates/ventas.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ventas</title>
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <div class="nav-item d-flex align-items-center">
+                        <img src="https://via.placeholder.com/40" class="rounded-circle me-2" alt="User" />
+                        <!-- Contenedor para mostrar nombre y apellido -->
+                        <span id="nombreApellido" class="me-3"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/cerrarsesion.js"></script>
 </body>
+
 </html>
